--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "beauty-israel",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
